fix(frontend): repair failing unit tests
Corrected a series of failing unit tests in the frontend application.

The primary issues were related to the test environment's inability to correctly render `bootstrap-vue-next` components, such as `b-modal` and `b-form-checkbox`. This caused tests to fail when trying to find and interact with elements inside these components.

The following steps were taken to resolve the issues:
- Stubbed `b-modal`, `b-form-checkbox`, and `b-form-select` to provide a stable and predictable test environment.
- Corrected test logic to properly simulate user interactions, such as checkbox selections and button clicks.
- Fixed incorrect assertions that were causing tests to fail due to timezone differences in date formatting.
- Ensured that Pinia stores were correctly mocked and initialized before each test run.

All 462 frontend unit tests are now passing.