@@ -4,26 +4,29 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import sgc.alerta.modelo.*;
-import sgc.comum.erros.ErroDominioNaoEncontrado;
-import sgc.processo.modelo.Processo;
-import sgc.sgrh.Perfil;
-import sgc.sgrh.SgrhService;
-import sgc.sgrh.Usuario;
-import sgc.sgrh.UsuarioRepo;
+import sgc.alerta.dto.AlertaDto;
+import sgc.alerta.dto.AlertaMapper;
+import sgc.alerta.erros.ErroAlerta;
+import sgc.alerta.model.*;
+import sgc.comum.erros.ErroEntidadeNaoEncontrada;
+import sgc.processo.model.Processo;
 import sgc.sgrh.dto.ResponsavelDto;
 import sgc.sgrh.dto.UnidadeDto;
-import sgc.subprocesso.modelo.Subprocesso;
-import sgc.unidade.modelo.TipoUnidade;
-import sgc.unidade.modelo.Unidade;
-import sgc.unidade.modelo.UnidadeRepo;
+import sgc.sgrh.model.Perfil;
+import sgc.sgrh.model.Usuario;
+import sgc.sgrh.model.UsuarioRepo;
+import sgc.sgrh.service.SgrhService;
+import sgc.subprocesso.model.Subprocesso;
+import sgc.unidade.model.TipoUnidade;
+import sgc.unidade.model.Unidade;
+import sgc.unidade.model.UnidadeRepo;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 
-import static sgc.alerta.modelo.TipoAlerta.*;
+import static sgc.alerta.model.TipoAlerta.*;
 
 /**
  * Serviço para gerenciar alertas do sistema.
@@ -38,8 +41,9 @@ public class AlertaService {
     private final AlertaRepo repositorioAlerta;
     private final AlertaUsuarioRepo alertaUsuarioRepo;
     private final UnidadeRepo unidadeRepo;
-    private final SgrhService servicoSgrh;
+    private final SgrhService sgrhService;
     private final UsuarioRepo usuarioRepo;
+    private final AlertaMapper alertaMapper;
 
     /**
      * Cria um alerta genérico para uma unidade específica e o associa aos seus
@@ -55,7 +59,7 @@ public class AlertaService {
      * @param descricao         O texto descritivo do alerta.
      * @param dataLimite        A data limite para a ação relacionada ao alerta (pode ser nulo).
      * @return A entidade {@link Alerta} que foi criada e persistida.
-     * @throws ErroDominioNaoEncontrado se a unidade de destino não for encontrada.
+     * @throws ErroEntidadeNaoEncontrada se a unidade de destino não for encontrada.
      */
     @Transactional
     public Alerta criarAlerta(
@@ -68,34 +72,28 @@ public class AlertaService {
         log.debug("Criando alerta tipo={} para unidade.", tipoAlerta);
 
         Unidade unidadeDestino = unidadeRepo.findById(codUnidadeDestino)
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Unidade", codUnidadeDestino));
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Unidade", codUnidadeDestino));
 
-        Alerta alerta = new Alerta();
-        alerta.setProcesso(processo);
-        alerta.setDataHora(LocalDateTime.now());
-        alerta.setUnidadeOrigem(null); // SEDOC não tem registro como unidade
-        alerta.setUnidadeDestino(unidadeDestino);
-        alerta.setDescricao(sanitizeHtml(descricao));
+        Alerta alerta = new Alerta()
+                .setProcesso(processo)
+                .setDataHora(LocalDateTime.now())
+                .setUnidadeOrigem(null) // SEDOC não tem registro como unidade
+                .setUnidadeDestino(unidadeDestino)
+                .setDescricao(descricao);
 
         Alerta alertaSalvo = repositorioAlerta.save(alerta);
-        log.info("Alerta criado: código={}, tipo={}, unidade={}",
-                alertaSalvo.getCodigo(), tipoAlerta, unidadeDestino.getNome());
-
-        // Buscar responsável da unidade via SGRH
         try {
-            Optional<ResponsavelDto> responsavel = servicoSgrh.buscarResponsavelUnidade(codUnidadeDestino);
-            if (responsavel.isPresent() && responsavel.get().titularTitulo() != null) {
-                criarAlertaUsuario(alertaSalvo, responsavel.get().titularTitulo(), codUnidadeDestino);
+            Optional<ResponsavelDto> responsavel = sgrhService.buscarResponsavelUnidade(codUnidadeDestino);
+            if (responsavel.isPresent() && responsavel.get().getTitularTitulo() != null) {
+                criarAlertaUsuario(alertaSalvo, responsavel.get().getTitularTitulo(), codUnidadeDestino);
+
                 // Se houver substituto, também o adiciona
-                if (responsavel.get().substitutoTitulo() != null) {
-                    criarAlertaUsuario(alertaSalvo, responsavel.get().substitutoTitulo(), codUnidadeDestino);
+                if (responsavel.get().getSubstitutoTitulo() != null) {
+                    criarAlertaUsuario(alertaSalvo, responsavel.get().getSubstitutoTitulo(), codUnidadeDestino);
                 }
-            } else {
-                log.warn("Responsável não encontrado para a unidade.");
             }
         } catch (Exception e) {
-            log.error("Erro ao buscar responsável da unidade {}: {}", codUnidadeDestino, e.getClass().getSimpleName(), e);
-            // Não interrompe o fluxo se não conseguir buscar o responsável
+            log.warn("Erro ao buscar responsável da unidade {} no SGRH. Alerta criado sem associação de usuário: {}", codUnidadeDestino, e.getMessage());
         }
         return alertaSalvo;
     }
@@ -126,18 +124,17 @@ public class AlertaService {
             List<Subprocesso> subprocessos) {
 
         log.info("Criando alertas para processo iniciado: {} unidades", codigosUnidades.size());
-        List<Alerta> alertasCriados = new ArrayList<>();
 
+        List<Alerta> alertasCriados = new ArrayList<>();
         for (Long codUnidade : codigosUnidades) {
             try {
                 // Buscar tipo da unidade via SGRH
-                Optional<UnidadeDto> unidadeDtoOptional = servicoSgrh.buscarUnidadePorCodigo(codUnidade);
+                Optional<UnidadeDto> unidadeDtoOptional = sgrhService.buscarUnidadePorCodigo(codUnidade);
                 if (unidadeDtoOptional.isEmpty()) {
                     log.warn("Unidade não encontrada no SGRH: {}", codUnidade);
                     continue;
                 }
-
-                TipoUnidade tipoUnidade = TipoUnidade.valueOf(unidadeDtoOptional.get().tipo());
+                TipoUnidade tipoUnidade = TipoUnidade.valueOf(unidadeDtoOptional.get().getTipo());
                 String nomeProcesso = processo.getDescricao();
 
                 // Encontrar o subprocesso correspondente para obter a data limite
@@ -148,63 +145,37 @@ public class AlertaService {
                         .orElse(processo.getDataLimite()); // Fallback para a data limite do processo se não encontrar subprocesso
 
                 // Criar alertas baseados no tipo de unidade
-                if (TipoUnidade.OPERACIONAL.equals(tipoUnidade)) {
-                    String descricao = String.format(
-                            "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
+                switch (tipoUnidade) {
+                    case OPERACIONAL -> {
+                        String desc = "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.".formatted(nomeProcesso, fmtData(dataLimite));
+                        Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_OPERACIONAL, codUnidade, desc, dataLimite);
+                        alertasCriados.add(alerta);
+                    }
+                    case INTERMEDIARIA -> {
+                        String desc = "Início do processo '%s' em unidade(s) subordinada(s). Aguarde a disponibilização dos mapas para validação até %s.".formatted(nomeProcesso, fmtData(dataLimite));
+                        Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_INTERMEDIARIA, codUnidade, desc, dataLimite);
+                        alertasCriados.add(alerta);
+                    }
+                    case INTEROPERACIONAL -> {
+                        String desc = "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.".formatted(nomeProcesso, fmtData(dataLimite));
+                        Alerta alertaOperacional = criarAlerta(processo, PROCESSO_INICIADO_INTEROPERACIONAL_OP, codUnidade, desc, dataLimite);
+                        alertasCriados.add(alertaOperacional);
 
-                    Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_OPERACIONAL, codUnidade, descricao, dataLimite);
-                    alertasCriados.add(alerta);
+                        String descIntermediaria = "Início do processo '%s' em unidade(s) subordinada(s). Aguarde a disponibilização dos mapas para validação até %s."
+                                .formatted(nomeProcesso, fmtData(dataLimite));
 
-                } else if (TipoUnidade.INTERMEDIARIA.equals(tipoUnidade)) {
-                    String descricao = String.format(
-                            "Início do processo '%s' em unidade(s) subordinada(s). " +
-                                    "Aguarde a disponibilização dos mapas para validação até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
+                        Alerta alertaIntermediaria = criarAlerta(processo,
+                                PROCESSO_INICIADO_INTEROPERACIONAL_INT,
+                                codUnidade,
+                                descIntermediaria,
+                                dataLimite);
 
-                    Alerta alerta = criarAlerta(processo, PROCESSO_INICIADO_INTERMEDIARIA, codUnidade, descricao, dataLimite);
-                    alertasCriados.add(alerta);
-
-                } else if (TipoUnidade.INTEROPERACIONAL.equals(tipoUnidade)) {
-                    String descOperacional = String.format(
-                            "Início do processo '%s'. Preencha as atividades e conhecimentos até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
-                    log.debug("Descrição para PROCESSO_INICIADO_INTEROPERACIONAL_OP: {}", descOperacional);
-                    Alerta alertaOperacional = criarAlerta(processo,
-                            PROCESSO_INICIADO_INTEROPERACIONAL_OP,
-                            codUnidade,
-                            descOperacional,
-                            dataLimite);
-
-                    alertasCriados.add(alertaOperacional);
-
-                    String descIntermediaria = String.format(
-                            "Início do processo '%s' em unidade(s) subordinada(s). " +
-                                    "Aguarde a disponibilização dos mapas para validação até %s.",
-                            nomeProcesso,
-                            formatarData(dataLimite)
-                    );
-                    log.debug("Descrição para PROCESSO_INICIADO_INTEROPERACIONAL_INT: {}", descIntermediaria);
-
-                    Alerta alertaIntermediaria = criarAlerta(processo,
-                            PROCESSO_INICIADO_INTEROPERACIONAL_INT,
-                            codUnidade,
-                            descIntermediaria,
-                            dataLimite);
-
-                    alertasCriados.add(alertaIntermediaria);
-
-                } else {
-                    log.warn("Tipo de unidade desconhecido: {} (unidade={})", tipoUnidade, codUnidade);
+                        alertasCriados.add(alertaIntermediaria);
+                    }
                 }
             } catch (Exception e) {
                 log.error("Erro ao criar alerta para a unidade {}: {}", codUnidade, e.getClass().getSimpleName(), e);
+                throw new ErroAlerta("Falha ao criar alerta para a unidade %d: %s".formatted(codUnidade, e.getMessage()), e);
             }
         }
 
@@ -222,17 +193,16 @@ public class AlertaService {
      * @param processo          O processo ao qual o cadastro pertence.
      * @param codUnidadeOrigem  O código da unidade que disponibilizou o cadastro.
      * @param codUnidadeDestino O código da unidade que deve analisar o cadastro (destino).
-     * @return O {@link Alerta} criado.
-     * @throws ErroDominioNaoEncontrado se a unidade de origem não for encontrada.
+     * @throws ErroEntidadeNaoEncontrada se a unidade de origem não for encontrada.
      */
     @Transactional
-    public Alerta criarAlertaCadastroDisponibilizado(
+    public void criarAlertaCadastroDisponibilizado(
             Processo processo,
             Long codUnidadeOrigem,
             Long codUnidadeDestino) {
 
         Unidade unidadeOrigem = unidadeRepo.findById(codUnidadeOrigem)
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Unidade de origem", codUnidadeOrigem));
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Unidade de origem", codUnidadeOrigem));
 
         String descricao = String.format(
                 "Cadastro disponibilizado pela unidade %s no processo '%s'. Realize a análise do cadastro.",
@@ -240,7 +210,7 @@ public class AlertaService {
                 processo.getDescricao()
         );
 
-        return criarAlerta(processo, TipoAlerta.CADASTRO_DISPONIBILIZADO, codUnidadeDestino, descricao, null);
+        criarAlerta(processo, TipoAlerta.CADASTRO_DISPONIBILIZADO, codUnidadeDestino, descricao, null);
     }
 
     /**
@@ -250,43 +220,36 @@ public class AlertaService {
      * informando o motivo da devolução e solicitando que os ajustes necessários
      * sejam realizados.
      *
-     * @param processo             O processo ao qual o cadastro pertence.
-     * @param codigoUnidadeDestino O código da unidade que precisa ajustar o cadastro.
-     * @param motivo               A descrição do motivo pelo qual o cadastro foi devolvido.
-     * @return O {@link Alerta} criado.
+     * @param processo          O processo ao qual o cadastro pertence.
+     * @param codUnidadeDestino O código da unidade que precisa ajustar o cadastro.
+     * @param motivo            A descrição do motivo pelo qual o cadastro foi devolvido.
      */
     @Transactional
-    public Alerta criarAlertaCadastroDevolvido(
-            Processo processo,
-            Long codigoUnidadeDestino,
-            String motivo) {
+    public void criarAlertaCadastroDevolvido(Processo processo, Long codUnidadeDestino, String motivo) {
+        String desc = "Cadastro devolvido no processo '%s'. Motivo: %s. Realize os ajustes necessários e disponibilize novamente."
+                .formatted(processo.getDescricao(), motivo);
 
-        String descricao = String.format(
-                "Cadastro devolvido no processo '%s'. Motivo: %s. Realize os ajustes necessários e disponibilize novamente.",
-                processo.getDescricao(),
-                motivo
-        );
-
-        return criarAlerta(processo, TipoAlerta.CADASTRO_DEVOLVIDO, codigoUnidadeDestino, descricao, null);
+        criarAlerta(processo, TipoAlerta.CADASTRO_DEVOLVIDO, codUnidadeDestino, desc, null);
     }
 
     private void criarAlertaUsuario(Alerta alerta, String tituloStr, Long codUnidade) {
         try {
-            Long titulo = Long.parseLong(tituloStr);
+            String titulo = tituloStr;
             Usuario usuario = usuarioRepo.findById(titulo)
                     .orElseGet(() -> {
-                        log.info("Usuário {} não encontrado no banco de dados. Buscando no SGRH...", titulo);
-                        return servicoSgrh.buscarUsuarioPorTitulo(tituloStr)
+                        log.info("Usuário {} não encontrado no banco de dados. Buscando no SGRH.", titulo);
+                        return sgrhService.buscarUsuarioPorTitulo(tituloStr)
                                 .map(usuarioDto -> {
-                                    Usuario novoUsuario = new Usuario();
-                                    novoUsuario.setTituloEleitoral(Long.parseLong(usuarioDto.titulo()));
-                                    novoUsuario.setNome(usuarioDto.nome());
-                                    novoUsuario.setEmail(usuarioDto.email());
-                                    novoUsuario.setPerfis(java.util.Set.of(Perfil.CHEFE)); // Default role
+                                    Usuario novoUsuario = new Usuario()
+                                            .setTituloEleitoral(usuarioDto.getTitulo())
+                                            .setNome(usuarioDto.getNome())
+                                            .setEmail(usuarioDto.getEmail())
+                                            .setPerfis(java.util.Set.of(Perfil.CHEFE));
+
                                     unidadeRepo.findById(codUnidade).ifPresent(novoUsuario::setUnidade);
                                     return novoUsuario;
                                 })
-                                .orElseThrow(() -> new ErroDominioNaoEncontrado("Usuário", titulo));
+                                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Usuário", titulo));
                     });
 
             AlertaUsuario alertaUsuario = new AlertaUsuario();
@@ -303,40 +266,33 @@ public class AlertaService {
         }
     }
 
-    private String formatarData(LocalDateTime data) {
+    private String fmtData(LocalDateTime data) {
         return data != null
                 ? String.format("%02d/%02d/%d", data.getDayOfMonth(), data.getMonthValue(), data.getYear())
                 : "Data não definida";
-    }
-
-    private String sanitizeHtml(String input) {
-        if (input == null) {
-            return null;
-        }
-        // Remove tags HTML básicas para uma sanitização simples
-        return input.replaceAll("<[^>]*>", "");
     }
 
     /**
      * Marca um alerta específico como lido para um determinado usuário.
      * <p>
      * Este método localiza a associação {@link AlertaUsuario} pela sua chave composta
-     * (ID do alerta e título de eleitor do usuário) e, caso o alerta ainda não
+     * (código do alerta e título de eleitor do usuário) e, caso o alerta ainda não
      * tenha sido lido, define a data e hora da leitura como o momento atual.
      * <p>
      * Corresponde à ação do CDU-02: Visualizar alertas.
      *
      * @param usuarioTituloStr O título de eleitor do usuário (em formato String).
-     * @param alertaId         O ID do alerta a ser marcado como lido.
-     * @throws ErroDominioNaoEncontrado se a associação entre o alerta e o usuário não for encontrada.
-     * @throws NumberFormatException se o {@code usuarioTituloStr} não for um número válido.
+     * @param alertaId         O código do alerta a ser marcado como lido.
+     * @throws ErroEntidadeNaoEncontrada se a associação entre o alerta e o usuário não for encontrada.
+     * @throws NumberFormatException     se o {@code usuarioTituloStr} não for um número válido.
      */
     @Transactional
     public void marcarComoLido(String usuarioTituloStr, Long alertaId) {
-        Long usuarioTitulo = Long.parseLong(usuarioTituloStr);
+        String usuarioTitulo = usuarioTituloStr;
+
         AlertaUsuario.Chave id = new AlertaUsuario.Chave(alertaId, usuarioTitulo);
-        AlertaUsuario alertaUsuario = alertaUsuarioRepo.findById(id).orElseThrow(() -> new ErroDominioNaoEncontrado(
-                "Não foi encontrado o alerta %d para o usuário %d".formatted(alertaId, usuarioTitulo))
+        AlertaUsuario alertaUsuario = alertaUsuarioRepo.findById(id).orElseThrow(() -> new ErroEntidadeNaoEncontrada(
+                "Não foi encontrado o alerta %d para o usuário %s".formatted(alertaId, usuarioTitulo))
         );
 
         if (alertaUsuario.getDataHoraLeitura() == null) {
@@ -344,5 +300,40 @@ public class AlertaService {
             alertaUsuarioRepo.save(alertaUsuario);
             log.info("Alerta {} marcado como lido para o usuário {}", alertaId, usuarioTitulo);
         }
+    }
+
+    /**
+     * Lista todos os alertas para um usuário específico.
+     *
+     * @param usuarioTituloStr O título de eleitor do usuário.
+     * @return Uma lista de {@link AlertaDto}.
+     */
+    @Transactional(readOnly = true)
+    public List<AlertaDto> listarAlertasPorUsuario(String usuarioTituloStr) {
+        String usuarioTitulo = usuarioTituloStr;
+        List<AlertaUsuario> alertasUsuario = alertaUsuarioRepo.findById_UsuarioTituloEleitoral(usuarioTitulo);
+
+        return alertasUsuario.stream()
+                .map(alertaUsuario -> {
+                    Alerta alerta = alertaUsuario.getAlerta();
+                    AlertaDto dto = alertaMapper.toDto(alerta);
+
+                    // Adicionar a data de leitura específica do usuário ao DTO
+                    return AlertaDto.builder()
+                            .codigo(dto.getCodigo())
+                            .codProcesso(dto.getCodProcesso())
+                            .unidadeOrigem(dto.getUnidadeOrigem())
+                            .unidadeDestino(dto.getUnidadeDestino())
+                            .descricao(dto.getDescricao())
+                            .dataHora(dto.getDataHora())
+                            .dataHoraLeitura(alertaUsuario.getDataHoraLeitura())
+                            .linkDestino(dto.getLinkDestino())
+                            .mensagem(dto.getMensagem())
+                            .dataHoraFormatada(dto.getDataHoraFormatada())
+                            .processo(dto.getProcesso())
+                            .origem(dto.getOrigem())
+                            .build();
+                })
+                .toList();
     }
 }
