@@ -5,26 +5,25 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import sgc.atividade.dto.AtividadeDto;
 import sgc.atividade.dto.AtividadeMapper;
-import sgc.atividade.modelo.AtividadeRepo;
-import sgc.comum.erros.ErroDominioAccessoNegado;
-import sgc.comum.erros.ErroDominioNaoEncontrado;
-import sgc.conhecimento.dto.ConhecimentoDto;
-import sgc.conhecimento.dto.ConhecimentoMapper;
-import sgc.conhecimento.modelo.ConhecimentoRepo;
-import sgc.sgrh.UsuarioRepo;
-import sgc.subprocesso.modelo.SubprocessoRepo;
+import sgc.atividade.dto.ConhecimentoDto;
+import sgc.atividade.dto.ConhecimentoMapper;
+import sgc.atividade.model.AtividadeRepo;
+import sgc.atividade.model.ConhecimentoRepo;
+import sgc.comum.erros.ErroAccessoNegado;
+import sgc.comum.erros.ErroEntidadeNaoEncontrada;
+import sgc.comum.erros.ErroSituacaoInvalida;
+import sgc.sgrh.model.UsuarioRepo;
+import sgc.subprocesso.model.SubprocessoRepo;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Service
-@Transactional
-@RequiredArgsConstructor
 /**
  * Serviço para gerenciar a lógica de negócios de Atividades e Conhecimentos.
  */
+@Service
+@Transactional
+@RequiredArgsConstructor
 public class AtividadeService {
-
     private final AtividadeRepo atividadeRepo;
     private final AtividadeMapper atividadeMapper;
     private final ConhecimentoRepo conhecimentoRepo;
@@ -40,158 +39,158 @@ public class AtividadeService {
     public List<AtividadeDto> listar() {
         return atividadeRepo.findAll()
                 .stream()
-                .map(atividadeMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(atividadeMapper::toDto)
+                .toList();
     }
 
     /**
-     * Busca uma atividade pelo seu ID.
+     * Busca uma atividade pelo seu código.
      *
-     * @param idAtividade O ID da atividade.
+     * @param codAtividade O código da atividade.
      * @return O {@link AtividadeDto} correspondente.
-     * @throws ErroDominioNaoEncontrado se a atividade não for encontrada.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
      */
-    public AtividadeDto obterPorId(Long idAtividade) {
-        return atividadeRepo.findById(idAtividade)
-                .map(atividadeMapper::toDTO)
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Atividade", idAtividade));
+    public AtividadeDto obterPorCodigo(Long codAtividade) {
+        return atividadeRepo.findById(codAtividade)
+                .map(atividadeMapper::toDto)
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Atividade", codAtividade));
     }
 
     /**
      * Cria uma nova atividade, realizando validações de segurança e de estado do subprocesso.
      *
-     * @param atividadeDto O DTO com os dados da nova atividade.
-     * @param username     O nome de usuário (título de eleitor) do usuário que está criando a atividade.
+     * @param atividadeDto  O DTO com os dados da nova atividade.
+     * @param tituloUsuario O título de eleitor do usuário que está criando a atividade.
      * @return O {@link AtividadeDto} da atividade criada.
-     * @throws ErroDominioNaoEncontrado se o subprocesso ou o usuário não forem encontrados.
-     * @throws ErroDominioAccessoNegado se o usuário não for o titular da unidade do subprocesso.
-     * @throws IllegalStateException se o subprocesso já estiver finalizado.
+     * @throws ErroEntidadeNaoEncontrada se o subprocesso ou o usuário não forem encontrados.
+     * @throws ErroAccessoNegado         se o usuário não for o titular da unidade do subprocesso.
+     * @throws ErroSituacaoInvalida      se o subprocesso já estiver finalizado.
      */
-    public AtividadeDto criar(AtividadeDto atividadeDto, String username) {
-        var subprocesso = subprocessoRepo.findByMapaCodigo(atividadeDto.mapaCodigo())
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Subprocesso não encontrado para o mapa com código %d".formatted(atividadeDto.mapaCodigo())));
+    public AtividadeDto criar(AtividadeDto atividadeDto, String tituloUsuario) {
+        var subprocesso = subprocessoRepo.findByMapaCodigo(atividadeDto.getMapaCodigo())
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Subprocesso não encontrado para o mapa com código %d".formatted(atividadeDto.getMapaCodigo())));
 
-        var usuario = usuarioRepo.findByTituloEleitoral(Long.parseLong(username))
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Usuário", username));
+        var usuario = usuarioRepo.findById(tituloUsuario)
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Usuário", tituloUsuario));
 
+        // Validação defensiva: garante que apenas o titular da unidade pode criar atividades.
+        // Apesar da segurança estar configurada, mantemos esta verificação como proteção extra.
         if (!usuario.equals(subprocesso.getUnidade().getTitular())) {
-            throw new ErroDominioAccessoNegado("Usuário não autorizado a criar atividades para este subprocesso.");
-        }
-        if (subprocesso.getSituacao().isFinalizado()) {
-            throw new IllegalStateException("Subprocesso já está finalizado.");
+            throw new ErroAccessoNegado("Usuário não autorizado a criar atividades para este subprocesso.");
         }
 
         var entidade = atividadeMapper.toEntity(atividadeDto);
         var salvo = atividadeRepo.save(entidade);
-        return atividadeMapper.toDTO(salvo);
+
+        return atividadeMapper.toDto(salvo);
     }
 
     /**
      * Atualiza uma atividade existente.
      *
-     * @param id           O ID da atividade a ser atualizada.
+     * @param codigo       O código da atividade a ser atualizada.
      * @param atividadeDto O DTO com os novos dados da atividade.
      * @return O {@link AtividadeDto} da atividade atualizada.
-     * @throws ErroDominioNaoEncontrado se a atividade não for encontrada.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
      */
-    public AtividadeDto atualizar(Long id, AtividadeDto atividadeDto) {
-        return atividadeRepo.findById(id)
+    public AtividadeDto atualizar(Long codigo, AtividadeDto atividadeDto) {
+        return atividadeRepo.findById(codigo)
                 .map(existente -> {
                     var entidadeParaAtualizar = atividadeMapper.toEntity(atividadeDto);
                     existente.setDescricao(entidadeParaAtualizar.getDescricao());
                     existente.setMapa(entidadeParaAtualizar.getMapa());
 
                     var atualizado = atividadeRepo.save(existente);
-                    return atividadeMapper.toDTO(atualizado);
+                    return atividadeMapper.toDto(atualizado);
                 })
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Atividade", id));
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Atividade", codigo));
     }
 
     /**
      * Exclui uma atividade e todos os seus conhecimentos associados.
      *
-     * @param idAtividade O ID da atividade a ser excluída.
-     * @throws ErroDominioNaoEncontrado se a atividade não for encontrada.
+     * @param codAtividade O código da atividade a ser excluída.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
      */
-    public void excluir(Long idAtividade) {
-        atividadeRepo.findById(idAtividade).ifPresentOrElse(atividade -> {
+    public void excluir(Long codAtividade) {
+        atividadeRepo.findById(codAtividade).ifPresentOrElse(atividade -> {
             var conhecimentos = conhecimentoRepo.findByAtividadeCodigo(atividade.getCodigo());
             conhecimentoRepo.deleteAll(conhecimentos);
             atividadeRepo.delete(atividade);
         }, () -> {
-            throw new ErroDominioNaoEncontrado("Atividade", idAtividade);
+            throw new ErroEntidadeNaoEncontrada("Atividade", codAtividade);
         });
     }
 
     /**
      * Lista todos os conhecimentos associados a uma atividade específica.
      *
-     * @param idAtividade O ID da atividade.
+     * @param codAtividade O código da atividade.
      * @return Uma {@link List} de {@link ConhecimentoDto}.
-     * @throws ErroDominioNaoEncontrado se a atividade não for encontrada.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
      */
-    public List<ConhecimentoDto> listarConhecimentos(Long idAtividade) {
-        if (!atividadeRepo.existsById(idAtividade)) {
-            throw new ErroDominioNaoEncontrado("Atividade", idAtividade);
+    public List<ConhecimentoDto> listarConhecimentos(Long codAtividade) {
+        if (!atividadeRepo.existsById(codAtividade)) {
+            throw new ErroEntidadeNaoEncontrada("Atividade", codAtividade);
         }
-        return conhecimentoRepo.findByAtividadeCodigo(idAtividade)
+        return conhecimentoRepo.findByAtividadeCodigo(codAtividade)
                 .stream()
-                .map(conhecimentoMapper::toDTO)
-                .collect(Collectors.toList());
+                .map(conhecimentoMapper::toDto)
+                .toList();
     }
 
     /**
      * Cria um novo conhecimento e o associa a uma atividade existente.
      *
-     * @param idAtividade     O ID da atividade à qual o conhecimento será associado.
+     * @param codAtividade    O código da atividade à qual o conhecimento será associado.
      * @param conhecimentoDto O DTO com os dados do novo conhecimento.
      * @return O {@link ConhecimentoDto} do conhecimento criado.
-     * @throws ErroDominioNaoEncontrado se a atividade não for encontrada.
+     * @throws ErroEntidadeNaoEncontrada se a atividade não for encontrada.
      */
-    public ConhecimentoDto criarConhecimento(Long idAtividade, ConhecimentoDto conhecimentoDto) {
-        return atividadeRepo.findById(idAtividade)
+    public ConhecimentoDto criarConhecimento(Long codAtividade, ConhecimentoDto conhecimentoDto) {
+        return atividadeRepo.findById(codAtividade)
                 .map(atividade -> {
                     var conhecimento = conhecimentoMapper.toEntity(conhecimentoDto);
                     conhecimento.setAtividade(atividade);
                     var salvo = conhecimentoRepo.save(conhecimento);
-                    return conhecimentoMapper.toDTO(salvo);
+                    return conhecimentoMapper.toDto(salvo);
                 })
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Atividade", idAtividade));
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Atividade", codAtividade));
     }
 
     /**
      * Atualiza um conhecimento existente, verificando se ele pertence à atividade especificada.
      *
-     * @param idAtividade     O ID da atividade pai.
-     * @param idConhecimento  O ID do conhecimento a ser atualizado.
+     * @param codAtividade    O código da atividade pai.
+     * @param codConhecimento O código do conhecimento a ser atualizado.
      * @param conhecimentoDto O DTO com os novos dados do conhecimento.
      * @return O {@link ConhecimentoDto} do conhecimento atualizado.
-     * @throws ErroDominioNaoEncontrado se o conhecimento não for encontrado ou não pertencer à atividade.
+     * @throws ErroEntidadeNaoEncontrada se o conhecimento não for encontrado ou não pertencer à atividade.
      */
-    public ConhecimentoDto atualizarConhecimento(Long idAtividade, Long idConhecimento, ConhecimentoDto conhecimentoDto) {
-        return conhecimentoRepo.findById(idConhecimento)
-                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(idAtividade))
+    public ConhecimentoDto atualizarConhecimento(Long codAtividade, Long codConhecimento, ConhecimentoDto conhecimentoDto) {
+        return conhecimentoRepo.findById(codConhecimento)
+                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(codAtividade))
                 .map(existente -> {
                     var paraAtualizar = conhecimentoMapper.toEntity(conhecimentoDto);
                     existente.setDescricao(paraAtualizar.getDescricao());
                     var atualizado = conhecimentoRepo.save(existente);
-                    return conhecimentoMapper.toDTO(atualizado);
+                    return conhecimentoMapper.toDto(atualizado);
                 })
-                .orElseThrow(() -> new ErroDominioNaoEncontrado("Conhecimento", idConhecimento));
+                .orElseThrow(() -> new ErroEntidadeNaoEncontrada("Conhecimento", codConhecimento));
     }
 
     /**
      * Exclui um conhecimento, verificando se ele pertence à atividade especificada.
      *
-     * @param idAtividade    O ID da atividade pai.
-     * @param idConhecimento O ID do conhecimento a ser excluído.
-     * @throws ErroDominioNaoEncontrado se o conhecimento não for encontrado ou não pertencer à atividade.
+     * @param codAtividade    O código da atividade pai.
+     * @param codConhecimento O código do conhecimento a ser excluído.
+     * @throws ErroEntidadeNaoEncontrada se o conhecimento não for encontrado ou não pertencer à atividade.
      */
-    public void excluirConhecimento(Long idAtividade, Long idConhecimento) {
-        conhecimentoRepo.findById(idConhecimento)
-                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(idAtividade))
+    public void excluirConhecimento(Long codAtividade, Long codConhecimento) {
+        conhecimentoRepo.findById(codConhecimento)
+                .filter(conhecimento -> conhecimento.getCodigoAtividade().equals(codAtividade))
                 .ifPresentOrElse(conhecimentoRepo::delete, () -> {
-                    throw new ErroDominioNaoEncontrado("Conhecimento", idConhecimento);
+                    throw new ErroEntidadeNaoEncontrada("Conhecimento", codConhecimento);
                 });
     }
 }
